[package]
name = "jackmap"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.3"
arrayvec = "0.7.0"
flize = {git = "https://github.com/xacrimon/flize", branch = "v5"}
parking_lot = "0.11.1"


[profile.release]
debug = true
